# robot_cal_tools

rct_examples/config/: astra_camera_intr.yaml  camera_on_wrist_guesses.yaml  target_5x5.yaml  target_7x5.yaml
rct_examples/src/examples/: camera_on_wrist.cpp
rct_examples/src/tools/: camera_intrinsic_calibration_validation.cpp  camera_on_wrist_extrinsic.cpp  intrinsic_calibration.cpp  multi_static_camera_extrinsic.cpp  multi_static_camera_multi_step_extrinsic.cpp  solve_multi_camera_pnp.cpp  static_camera_extrinsic.cpp  static_camera_extrinsic_charuco.cpp
rct_image_tools/: CMakeLists.txt  package.xml
rct_image_tools/include/rct_image_tools/: aruco_finder.h  modified_circle_grid_target.h
rct_image_tools/src/: target_finder_tests.cpp
rct_image_tools/src/rct_image_tools/: aruco_finder.cpp
rct_optimizations/: CMakeLists.txt  package.xml
rct_optimizations/include/rct_optimizations/: eigen_conversions.h  extrinsic_3d_camera_cartesian_gantry.h  extrinsic_3d_camera_gantry_multi_obs.h  types.h
rct_optimizations/include/rct_optimizations/dh_kinematic/: dual_dh_chain_2d3d.h  dual_dh_chain_cost_base.h  dual_dh_chain_pose.h
rct_optimizations/src/rct_optimizations/: camera_intrinsic.cpp  eigen_conversions.cpp  extrinsic_3d_camera_cartesian_gantry.cpp  extrinsic_3d_camera_gantry_multi_obs.cpp  extrinsic_hand_eye.cpp  extrinsic_multi_static_camera.cpp  extrinsic_multi_static_camera_only.cpp  extrinsic_multi_static_camera_wrist_only.cpp  multi_camera_pnp.cpp  pnp.cpp
rct_optimizations/src/rct_optimizations/dh_kinematic/: dh_chain.cpp  dh_chain_kinematic_calibration.cpp  dual_dh_chain_2d3d.cpp  dual_dh_chain_pose3d.cpp
rct_optimizations/test/: dh_chain_kinematic_calibration_utest.cpp  dh_chain_kinematic_measurement_utest.cpp  extrinsic_3d_camera_gantry_multi_obs_utest.cpp
rct_optimizations/test/include/rct_optimizations_tests/: dh_chain_observation_creator.h  utilities.h
rct_optimizations/test/src/: utilities.cpp
rct_ros_tools/: CMakeLists.txt  README.md  package.xml
rct_ros_tools/include/rct_ros_tools/: data_set.h  parameter_loaders.h
rct_ros_tools/launch/: command_line_data_collection.launch
rct_ros_tools/src/: command_line_cal.cpp
rct_ros_tools/src/data_loader/: data_set.cpp  parameter_loaders.cpp
