<?xml version="1.0"?>
<package format="3">
  <name>rct_image_tools</name>
  <version>0.1.0</version>
  <description>The rct_image_tools package</description>

  <maintainer email="jmeyer1292@gmail.com">Jonathan Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament</buildtool_depend>
  <depend>rct_optimizations</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
