<?xml version="1.0"?>
<package format="3">
  <name>rct_ros_tools</name>
  <version>0.1.0</version>
  <description>The rct_ros_tools package</description>

  <author email="jmeyer1292@gmail.com">Jon Meyer</author>
  <maintainer email="jmeyer1292@gmail.com">Jon Meyer</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rct_image_tools</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
